# rxMpfr

./: .gitignore  CMakeLists.txt  Makefile  Makefile.native  README.md  _gitignore  clean.sh  constants.rex  navmath.cls  navmath.rex  rxmpfr.cpp  rxmpfr.h  sctc.rex  sincos.rex  xmalloc.h  xstringops.h
